# tinyHttpServer

./: CMakeLists.txt  README.md  client.cpp  main.cpp
CLionProjects/CodeCraft-2022/src/: CMakeLists.txt  CodeCraft-2022.cpp
CLionProjects/CodeCraft-2022/src/output/: solution.txt
Http/: HttpRequest.cpp  HttpRequest.h  MyHttp.cpp  MyHttp.h  MyHttpServer.cpp  MyHttpServer.h  utils.cpp  utils.h
IdeaProjects/OJ/: pom.xml
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/: OjApplication.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/Config/: SwaggerConfig.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/Utils/: FileUtil.java  GenerateIdUtil.java  StringUtil.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/controller/: QuestionController.java  TestCaseController.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/dao/: QuestionMapper.java  TestCaseMapper.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/entity/: Question.java  TestCase.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/service/: QuestionService.java  TestCaseService.java
IdeaProjects/OJ/src/main/java/com/judgeserver/oj/service/Impl/: QuestionServiceImpl.java  TestCaseServiceImpl.java
IdeaProjects/OJ/src/main/resources/: application.yml
IdeaProjects/OJ/src/main/resources/mappers/: QuestionMapper.xml  TestCaseMapper.xml
IdeaProjects/OJ/src/test/java/com/judgeserver/oj/: OjApplicationTests.java
Tcp/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  tcp.cpp  tcp.h
